--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft!">
   <title>Bikcraft - Bicicletas Elétricas</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./favicon.svg" type="svg">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img src="./assets/svg/bikcraft.svg" alt="Bikcraft Logo"></a>
+      <nav aria-label="primary">
+        <ul class="header-menu">
+          <li><a href="./bikes.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 </body>
 
