--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./"><img src="./assets/svg/bikcraft.svg" alt="Bikcraft Logo"></a>
       <nav aria-label="Primária">
-        <ul class="header-menu">
+        <ul class="header-menu color-0">
           <li><a href="./bikes.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
           <li><a href="./contact.html">Contato</a></li>
@@ -27,17 +27,20 @@
     </div>
   </header>
   <main class="intro-bg">
-    <div class="intro">
+    <div class="intro container">
       <div class="intro-text">
-        <h1>Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="font-1-xll color-0">Bicicletas feitas sob medida<span class="color-p1">.</span></h1>
+        <p class="font-2-l color-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="btn" href="./bikes.html">Escolha a sua</a>
       </div>
-      <div>
+      <div class="intro-img">
         <img src="./assets/img/photos/intro-photo.jpg" alt="Bicicleta elétrica preta">
       </div>
     </div>
   </main>
+  <section class="container">
+    <h2 class="font-1-xll">escolha a sua<span class="color-p1">.</span></h2>
+  </section>
 
 </body>
 
