:heavy_plus_sign: Bikes Section added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="header container">
       <a href="./"><img src="./assets/svg/bikcraft.svg" alt="Bikcraft Logo"></a>
       <nav aria-label="Primária">
-        <ul class="header-menu color-0">
+        <ul class="header-menu font-1-m color-0">
           <li><a href="./bikes.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
           <li><a href="./contact.html">Contato</a></li>
@@ -38,8 +38,27 @@
       </div>
     </div>
   </main>
-  <section class="container">
-    <h2 class="font-1-xll">escolha a sua<span class="color-p1">.</span></h2>
+  <section class="bikes">
+    <div class="container">
+      <h2 class="font-1-xll color-11">escolha a sua<span class="color-p1">.</span></h2>
+    </div>
+    <div class="bike-box">
+      <div class="scroll-x">
+        <div class="bike-item"><a href="./"><img src="./assets/img/bikes/magic-home.jpg" alt="Bicicleta Magic Might">
+            <h3 class="font-1-xl color-11">Magic Might</h3>
+            <p class="font-2-m color-8">R$ 2499</p>
+          </a></div>
+        <div class="bike-item"><a href="./"><img src="./assets/img/bikes/nimbus-home.jpg" alt="Bicicleta Nimbus Stark">
+            <h3 class="font-1-xl color-11">Nimbus Stark</h3>
+            <p class="font-2-m color-8">R$ 4999</p>
+          </a></div>
+        <div class="bike-item"><a href="./"><img src="./assets/img/bikes/nebula-home.jpg" alt="Bicicleta Nebula Cosmic">
+            <h3 class="font-1-xl color-11">Nebula Cosmic</h3>
+            <p class="font-2-m color-8">R$ 3999</p>
+          </a></div>
+      </div>
+    </div>
+    </div>
   </section>
 
 </body>
