:ok_hand: Quick fixes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </main>
-  <section class="bikes">
+  <article class="bikes">
     <div class="container">
       <h2 class="font-1-xll color-11">escolha a sua<span class="color-p1">.</span></h2>
     </div>
@@ -59,8 +59,7 @@
       </div>
     </div>
     </div>
-  </section>
-
+  </article>
 </body>
 
 </html>
